# mRpc

./: README.md
include/: atomic.h  ev_endian.h  util.h
src/: CMakeLists.txt  codeClite.cpp  rpc.proto  rpcCode.cpp  rpcCode.h  tcpClient.cpp
test/: CMakeLists.txt  rpc.proto  server.cpp  tcpserver_test.cc
